@startuml

title __12-CLASS's Class Diagram__\n

  namespace  {
    class A {
    }
  }
  

  namespace  {
    class B {
        {static} + main()
    }
  }
  

  namespace  {
    class Bar {
        ~ Bar()
    }
  }
  

  namespace  {
    class C {
        {static} + main()
    }
  }
  

  namespace  {
    class Foo {
        ~ var : int
        ~ Foo()
    }
  }
  

  namespace  {
    class Initialization {
        {static} ~ final_one : int
        ~ final_zero : int
        {static} ~ i : int
        ~ one : int
        ~ zero : int
        {static} + main()
        {static} ~ variableInitialization()
    }
  }
  

  B -up-|> A
  Foo -up-|> Bar


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
